# SQLMESH_2_GGM

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy-tests.yml  pipeline.yml  pytest.yml  schema-validation.yml
config/: __init__.py  config.py
dlt/: constants.py  pipeline.py
dlt/.dlt/: config.toml  secrets.toml  secrets.toml.example
docker/: docker-compose.yml  run_demo.sh
ggm/: README.md
ggm/selectie/cssd/: README.md  Sociaal_Domein_Beschikking_en_Voorziening__Domain_Objects_postgres.sql
ingest/: pipeline.py
ingest/.dlt/: config.toml  secrets.toml
scripts/: __init__.py  ddl_parser.py  ddl_to_sqlmesh.py  dev.py  doctor.py  pipeline.py  validate_data.py  validate_schema.py
scripts/tests/: conftest.py  test_ddl_to_sqlmesh.py  test_validate_data.py  test_validate_schema.py
sqlmesh/: config.yaml  external_models.yaml
sqlmesh/audits/: wet_enum.sql
sqlmesh/models/silver/: beschikking.sql  beschikte_voorziening.sql  declaratieregel.sql
sqlmesh/models/stg/: szwerker.sql  wvdos.sql
synthetic/: generate_synthetic_data.py  load_to_oracle.py  load_to_postgres.py
tests/: conftest.py  test_oracle_tns_alias.py  test_pipeline.py
transform/: config.yaml  external_models.yaml
transform/audits/: beschikking.sql  beschikte_voorziening.sql  client.sql  declaratieregel.sql  medewerker.sql
transform/models/silver/: client.sql  medewerker.sql  wet_enum.sql
transform/models/stg/: abc_refcod.sql  szclient.sql  szregel.sql  szukhis.sql  wvbesl.sql  wvind_b.sql
