[project]
name = "ggm-pipeline"
version = "0.1.0"
description = "GGM data pipeline using dlt and SQLMesh"
requires-python = "== 3.12.10"
dependencies = [
    # dlt with destination drivers
    # Core: postgres, mssql, duckdb, mysql (via sqlalchemy)
    "dlt[duckdb,mssql,postgres,sqlalchemy]>=1.4.0",
    # SQLMesh for transformations
    "sqlmesh[duckdb,mssql,mssql-odbc,mysql,postgres]>=0.228.5",
    # Source drivers
    "oracledb>=3.2.0",
    "pymysql>=1.1.1",
    "pyodbc>=5.2.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=18.0.0",
    "connectorx>=0.4.5",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "numpy>=2.4.1",    
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "docker>=7.1.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
dev = "scripts.dev:main"
pipeline = "scripts.pipeline:main"
doctor = "scripts.doctor:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests", "scripts/tests", "synthetic/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require Docker)",
]
filterwarnings = [
    # Ignore deprecation warnings from third-party dependencies
    "ignore:ast.Num is deprecated:DeprecationWarning",
    "ignore:ast.Str is deprecated:DeprecationWarning",
    "ignore:ast.NameConstant is deprecated:DeprecationWarning",
    "ignore:`json_encoders` is deprecated:pydantic.warnings.PydanticDeprecatedSince20",
]
